name:                write-yourself-a-scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/write-yourself-a-scheme#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable write-yourself-a-scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec >= 3.1.11
                     , write-yourself-a-scheme
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/write-yourself-a-scheme
